Include match state in response
